implemented manage collisions in Meanders.java